--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,24 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+          
+      - name: 安装 repo 工具
+        run: |
+          git clone https://github.com/friendlyarm/repo
+          sudo cp repo/repo /usr/bin/
+
+      - name: 下载项目源代码
+        run: |
+          mkdir friendlywrt-rk3328
+          cd friendlywrt-rk3328
+          repo init -u https://github.com/friendlyarm/friendlywrt_manifests -b master-v19.07.1 -m rk3328.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle
+          repo sync -c --no-clone-bundle
+      
+      - name: 同步项目到最新版本
+        run: repo sync -c --no-clone-bundle
+      
+      - name: 搭建编译环境
+        run: wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
+        
+      - name: 查看帮助
+        run: ./build.sh
