--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@main
 
+      - name: 搭建编译环境
+        run: wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
+        
       - name: 安装 repo 工具
         run: |
           git clone https://github.com/friendlyarm/repo
@@ -37,8 +40,7 @@ jobs:
           repo init -u https://github.com/friendlyarm/friendlywrt_manifests -b master-v19.07.1 -m rk3328.xml --repo-url=https://github.com/friendlyarm/repo  --no-clone-bundle
           repo sync -c  --no-clone-bundle
                 
-      - name: 搭建编译环境
-        run: wget -O - https://raw.githubusercontent.com/friendlyarm/build-env-on-ubuntu-bionic/master/install.sh | bash
-        
       - name: 查看帮助
-        run: ./build.sh
+        run: |
+          cd friendlywrt-rk3328
+          ./build.sh
